crates/neenee-tui/src/render/snapshots/neenee_tui__render__snapshot_tests__bash_collapsed_renders_preview.snap
---
source: crates/neenee-tui/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 24)"
---
  + ⠋ ❯ Run echo hi
    $ echo hi
    hi
    Exit 0
