crates/neenee-tui/src/render/snapshots/neenee_tui__render__snapshot_tests__bash_expanded_renders_structured_shell.snap
---
source: crates/neenee-tui/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - ✗ ❯ Run cargo test · failed 0ms

    Arguments  cargo test
    Result
      running 3 tests
      ...
      test result: ok. 3 passed
      warning: unused import
      exit 1

backgrounds:
.=reset  B=#151716  C=#111312
0: .2 B76
1: .2 C76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
6: .2 C76
7: .2 C76
8: .2 C76
9: .2 C76
