crates/neenee-tui/src/render/snapshots/neenee_tui__render__snapshot_tests__edit_file_multihunk_interleaves_changes.snap
---
source: crates/neenee-tui/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - Edit a.rs +2 -2

     1   fn one() {
     2 -     return 1;
     2 +     return 10;
     3   }
     4
     5   fn two() {
     6 -     return 2;
     6 +     return 20;
     7   }

backgrounds:
.=reset  B=#070808  C=#111312  D=#3A2626  E=#283A2D
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C18 D2 C56
4: .2 C18 E3 C55
5: .2 C76
6: .2 C76
7: .2 C76
8: .2 C18 D2 C56
9: .2 C18 E3 C55
10: .2 C76
11: .2 B76
