crates/neenee-tui/src/render/snapshots/neenee_tui__render__snapshot_tests__read_file_expanded_renders_code_block.snap
---
source: crates/neenee-tui/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - Read src/lib.rs

    Result
      1 fn main() {
      2     let x = 1;
      3 }
      4

backgrounds:
.=reset  B=#151716  C=#111312
0: .2 B76
1: .2 C76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
6: .2 C76
7: .2 C76
